# AmPayIT

./: .env  .gitignore  README.md  pyproject.toml
task_1/: config.py  database.py  main.py  models.py  orm.py  schemas.py
task_2/: main.py
task_3/: main.py  models.py  orm.py
task_4/: database.py  file.csv  main.py  models.py  orm.py
task_5/: main.py
task_7/: main.py  models.py  orm.py
